[gd_scene load_steps=24 format=3 uid="uid://bwb2q5f1c3u0f"]

[ext_resource type="Script" path="res://alien/alien.gd" id="1_8cxqj"]
[ext_resource type="PackedScene" uid="uid://dogxi7ua7nr68" path="res://alien/alien.glb" id="1_g6xkx"]
[ext_resource type="ArrayMesh" uid="uid://cbnlamm2eyc82" path="res://alien/eye.res" id="3_4f3k5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c75k4"]
radius = 1.229
height = 4.669

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8t41b"]
animation = &"Melee"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5ibu"]
animation = &"Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_6yww5"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_jyebu"]
fadein_time = 0.19
fadeout_time = 0.3

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pjqw8"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_acf6d"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_noknn"]
animation = &"Run"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_4klws"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_0b52t"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_noknn")
nodes/Animation/position = Vector2(160, 160)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_4klws")
nodes/TimeScale/position = Vector2(360, 140)
nodes/output/position = Vector2(520, 160)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"Animation"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_srmt6"]
xfade_time = 0.33
advance_mode = 2
advance_condition = &"Running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q3xfc"]
xfade_time = 0.42
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3341m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0u1wp"]
states/Death/node = SubResource("AnimationNodeAnimation_pjqw8")
states/Death/position = Vector2(493, 223)
states/Idle/node = SubResource("AnimationNodeAnimation_acf6d")
states/Idle/position = Vector2(400, 81)
states/Run/node = SubResource("AnimationNodeBlendTree_0b52t")
states/Run/position = Vector2(625, 81)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_srmt6"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_q3xfc"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_3341m")]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_ukg7w"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_6o05n"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_x5ibu")
nodes/Animation/position = Vector2(-60, 280)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_8t41b")
"nodes/Animation 2/position" = Vector2(320, 400)
nodes/Melee/node = SubResource("AnimationNodeOneShot_6yww5")
nodes/Melee/position = Vector2(520, 180)
nodes/Shoot/node = SubResource("AnimationNodeOneShot_jyebu")
nodes/Shoot/position = Vector2(296, 115)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_0u1wp")
nodes/StateMachine/position = Vector2(60, 40)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_ukg7w")
nodes/TimeScale/position = Vector2(140, 260)
nodes/output/position = Vector2(840, 120)
node_connections = [&"output", 0, &"Melee", &"Melee", 0, &"Shoot", &"Melee", 1, &"Animation 2", &"Shoot", 0, &"StateMachine", &"Shoot", 1, &"TimeScale", &"TimeScale", 0, &"Animation"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_sxoyd"]

[sub_resource type="Animation" id="Animation_b5qkg"]
resource_name = "Blink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../alien/Armature/Skeleton3D/Body:blend_shapes/Blink")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.101985, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ilhm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../alien/Armature/Skeleton3D/Body:blend_shapes/Blink")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ytnt"]
_data = {
"Blink": SubResource("Animation_b5qkg"),
"RESET": SubResource("Animation_ilhm2")
}

[node name="Alien" type="RigidBody3D"]
process_mode = 1
collision_layer = 4
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_8cxqj")

[node name="alien" parent="." instance=ExtResource("1_g6xkx")]
transform = Transform3D(-0.322, 0, -4.86206e-08, 0, 0.322, 0, 4.86206e-08, 0, -0.322, 0, 0, 0)

[node name="Eye" parent="alien/Armature" index="0"]
visible = false

[node name="Skeleton3D" parent="alien/Armature" index="1"]
bones/0/position = Vector3(0, 1.10549, 0)
bones/0/rotation = Quaternion(0.644825, 0, -1.4318e-16, 0.76433)
bones/1/rotation = Quaternion(-0.335813, 3.38398e-24, 8.28539e-17, 0.941929)
bones/2/rotation = Quaternion(-0.388398, 1.46583e-23, 7.56065e-17, 0.921492)
bones/3/position = Vector3(0.848069, 1.56632, 0.137576)
bones/3/rotation = Quaternion(0.0320831, -0.183363, -0.216143, 0.958452)
bones/4/rotation = Quaternion(0.838499, 0.00111855, 0.0716721, 0.540168)
bones/5/position = Vector3(1.01897, 0.716174, 0.182583)
bones/5/rotation = Quaternion(0.160401, -0.151915, -0.612161, 0.759245)
bones/6/rotation = Quaternion(0.0031218, 0.253795, 0.000517968, 0.967253)
bones/7/rotation = Quaternion(0.126061, -0.0913454, 0.78758, -0.596224)
bones/8/rotation = Quaternion(0.575503, 0.388121, 0.141463, 0.705795)
bones/9/position = Vector3(-0.668815, 1.56632, 0.0277991)
bones/9/rotation = Quaternion(0.0721473, 0.18442, 0.252109, 0.94722)
bones/10/rotation = Quaternion(0.813518, -0.00119555, -0.0695367, 0.577367)
bones/11/position = Vector3(-0.902069, 0.716174, 0.14012)
bones/11/rotation = Quaternion(0.156803, 0.1531, 0.616591, 0.756167)
bones/12/rotation = Quaternion(0.00314335, -0.253795, -0.000521555, 0.967253)
bones/13/position = Vector3(-0.252111, -0.0180746, 0.139776)
bones/13/rotation = Quaternion(0.00780177, -0.0038997, 0.786604, 0.617397)
bones/14/rotation = Quaternion(0.279881, -0.461409, -0.068797, 0.839068)
bones/15/position = Vector3(0.620707, 0.259275, 2.38248)
bones/15/rotation = Quaternion(-0.530176, 0.361415, -0.266408, 0.719249)
bones/16/position = Vector3(1.72192, 1.71673, 3.42799)
bones/17/position = Vector3(3.3809, -0.00924134, 1.45802)
bones/18/position = Vector3(2.18357, 3.67374, 0.42955)
bones/19/position = Vector3(2.3548, 0.099805, -0.644051)
bones/19/rotation = Quaternion(-0.201914, 0.437379, -0.10146, 0.870423)
bones/20/position = Vector3(0.901446, 1.42385, -0.321506)
bones/21/position = Vector3(-0.480398, 0.259275, 2.38248)
bones/21/rotation = Quaternion(-0.530176, -0.361415, 0.266408, 0.719249)
bones/22/position = Vector3(-1.72192, 1.71673, 3.42799)
bones/23/position = Vector3(-3.3809, -0.00924134, 1.45802)
bones/24/position = Vector3(-2.18357, 3.67374, 0.42955)
bones/25/position = Vector3(-2.58085, 0.099805, -0.644051)
bones/25/rotation = Quaternion(-0.201914, -0.437379, 0.10146, 0.870423)
bones/26/position = Vector3(-0.979143, 1.65543, -0.341559)

[node name="Body" parent="alien/Armature/Skeleton3D" index="0"]
blend_shapes/Shoot = 1.0

[node name="RootBone" type="BoneAttachment3D" parent="."]
transform = Transform3D(1, 2.18874e-16, -1.84652e-16, -2.18874e-16, 0.168401, -0.985719, -1.84652e-16, 0.985719, 0.168401, 0, 1.10549, 0)
bone_name = "Root"
bone_idx = 0
use_external_skeleton = true
external_skeleton = NodePath("../alien/Armature/Skeleton3D")

[node name="HeadBone" type="BoneAttachment3D" parent="."]
transform = Transform3D(1, -5.31321e-18, -7.53293e-18, 5.9062e-18, 0.996711, 0.081043, 7.07756e-18, -0.081043, 0.996711, 4.16224e-16, 2.41643, 1.98106)
bone_name = "Head"
bone_idx = 2
use_external_skeleton = true
external_skeleton = NodePath("../alien/Armature/Skeleton3D")

[node name="Node3D" type="Node3D" parent="HeadBone"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -1.6653e-09, 1.43874, 0.080938)

[node name="Eye" type="MeshInstance3D" parent="HeadBone/Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("3_4f3k5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 7.31439e-17, 0.764438, -0.193173)
shape = SubResource("CapsuleShape3D_c75k4")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_6o05n")
anim_player = NodePath("../alien/AnimationPlayer")
active = true
parameters/Melee/active = false
parameters/Melee/request = 0
parameters/Shoot/active = false
parameters/Shoot/request = 0
parameters/StateMachine/playback = SubResource("AnimationNodeStateMachinePlayback_sxoyd")
parameters/StateMachine/conditions/Idle = false
parameters/StateMachine/conditions/Running = false
parameters/StateMachine/Run/TimeScale/scale = 1.73
parameters/TimeScale/scale = 0.53

[node name="Timer" type="Timer" parent="."]
wait_time = 1.402
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Timer"]
libraries = {
"": SubResource("AnimationLibrary_6ytnt")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.31
avoidance_enabled = true

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="Timer/AnimationPlayer" method="play" binds= ["Blink"]]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]

[editable path="alien"]
